# graph-drawing

./: .conjunctive_normal_form.cnf  .gitignore  .output.txt  .proof.txt  CMakeLists.txt  charts.py  compare_test_results.py  config.txt  conjunctive_normal_form.cnf  daje  example_graphs.py  gen_config.txt  glucose  lines.py  main.cpp  makefile  makefile.test  makefile2  prova  shape.cnf  stats  stats_config.txt  test_results.csv
baseline-ogdf/: drawer.cpp
example-graphs/: g1.txt  g10.txt  g11.txt  g12.txt  g14.txt  g2.txt  g3.txt  g4.txt  g5.txt  g6.txt  g8.txt  random_graph.txt  random_graph_augmented.txt
example-graphs/g13/: g13.txt
example-graphs/g7/: g7.txt
include/baseline-ogdf/: drawer.hpp
include/config/: config.hpp
include/core/: utils.hpp
include/drawing/: polygon.hpp  svg_drawer.hpp
include/orthogonal/: area_compacter.hpp  drawing_builder.hpp  drawing_stats.hpp  file_loader.hpp
include/sat/: cnf_builder.hpp  glucose.hpp
src/: gen.cpp  main.cpp  stats.cpp
src/baseline-ogdf/: drawer.cpp  drawer.hpp
src/config/: config.cpp  config.hpp
src/core/: csv.cpp  csv.hpp  utils.cpp  utils.hpp
test-graphs/: g1.gml  g10.gml  g11.gml  g12.gml  g2.gml  g3.gml  g4.gml  g5.gml  g6.gml  g7.gml  g8.gml  g9.gml  graph_50_nodes_dense10.gml  graph_50_nodes_dense11.gml  graph_50_nodes_dense12.gml  graph_50_nodes_dense13.gml  graph_50_nodes_dense14.gml  graph_50_nodes_dense15.gml  graph_50_nodes_dense16.gml  graph_50_nodes_dense17.gml  graph_50_nodes_dense18.gml  graph_50_nodes_dense19.gml  graph_50_nodes_sparse0.gml  graph_50_nodes_sparse1.gml  graph_50_nodes_sparse2.gml  graph_50_nodes_sparse3.gml  graph_50_nodes_sparse4.gml  graph_50_nodes_sparse5.gml  graph_50_nodes_sparse6.gml  graph_50_nodes_sparse7.gml  graph_50_nodes_sparse8.gml  graph_50_nodes_sparse9.gml  random_graph.gml  random_graph_augmented.gml
(+63 files in other folders)
